src/objects/FieloPLT__Tracker__c.object
<CustomObject>
    <fields>
        <fullName>FieloPLT__Action__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Action</label>
        <referenceTo>FieloPLT__Action__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Tracker</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Date__c</fullName>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>FieloPLT__Event__c</referenceTo>
        <relationshipName>Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsOffline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsReverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Trackers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__MissionMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission Member</label>
        <referenceTo>FieloPLT__MissionMember__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Trackers</relationshipLabel>
        <relationshipName>Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tracker</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>